src/test/ui/consts/const-eval/const_raw_ptr_ops2.stderr
error: any use of this value will cause an error
  --> $DIR/const_raw_ptr_ops2.rs:8:28
   |
LL | const Y2: usize = unsafe { &1 as *const i32 as usize + 1 };
   | ---------------------------^^^^^^^^^^^^^^^^^^^^^^^^^-------
   |                            |
   |                            cannot cast pointer to integer because it was not created by cast from integer
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/const_raw_ptr_ops2.rs:13:26
   |
LL | const Z2: i32 = unsafe { *(42 as *const i32) };
   | -------------------------^^^^^^^^^^^^^^^^^^^---
   |                          |
   |                          unable to turn bytes into a pointer
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/const_raw_ptr_ops2.rs:15:26
   |
LL | const Z3: i32 = unsafe { *(44 as *const i32) };
   | -------------------------^^^^^^^^^^^^^^^^^^^---
   |                          |
   |                          unable to turn bytes into a pointer
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: aborting due to 3 previous errors

